[package]
name = "tether"
version = "0.1.0"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
description = "Extremely simple bindings to an OS web view."
repository = "https://github.com/quadrupleslap/tether"

[dependencies]
cfg-if = "0.1"

[build-dependencies]
cfg-if = "0.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
cc = "1.0"

#TODO: Remember, additional platforms need to be added to the exclusion list below.
#TODO: Remove git stuff.

[target.'cfg(not(target_os = "windows"))'.dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_10"] }
webkit2gtk = { git = "https://github.com/gtk-rs/webkit2gtk-rs", features = ["v2_8"] }
