[package]
name = "tether"
version = "0.1.0"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
description = "Extremely simple bindings to an OS web view."
repository = "https://github.com/quadrupleslap/tether"

[dependencies]
cfg-if = "0.1"

[build-dependencies]
cfg-if = "0.1"

# --- Windows --- #

[target.'cfg(target_os = "windows")'.build-dependencies]
cc = "1.0"

# --- macOS --- #

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.14"
dispatch = "0.1"
objc = "0.2"

# --- Other Platforms --- #

#TODO: Remember, additional platforms need to be added to the exclusion list below.
#TODO: Remove git stuff.

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
gtk = { git = "https://github.com/gtk-rs/gtk", features = ["v3_10"] }
webkit2gtk = { git = "https://github.com/gtk-rs/webkit2gtk-rs", features = ["v2_8"] }
